kubernetes/cert-manager-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-webhook
  namespace: inventomate
spec:
  selector:
    app: cert-manager
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-manager
  template:
    metadata:
      labels:
        app: cert-manager
    spec:
      containers:
        - name: cert-manager-webhook
          image: quay.io/jetstack/cert-manager-webhook:v1.14.5
          args:
            - --v=2
            - --secure-port=8443
            - --tls-cert-file=/etc/cert-manager-webhook/tls.crt
            - --tls-private-key-file=/etc/cert-manager-webhook/tls.key
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/cert-manager-webhook
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: cert-manager-webhook-certs
