kubernetes/spring.yaml
# spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-inventomate
spec:
  selector:
    matchLabels:
      app: spring-inventomate
  template:
    metadata:
      labels:
        app: spring-inventomate
    spec:
      containers:
      - name: spring-inventomate
        image: simondileogit/spring-inventomate:6
        ports:
        - containerPort: 8080
---
# spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-inventomate
spec:
  ports:
  - port: 8080
  selector:
    app: spring-inventomate
