kubernetes/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventomate-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - inventomate.xyz
    secretName: cloudflare-token-secret
  rules:
  - host: inventomate.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-inventomate
            port:
              number: 443
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spring-inventomate
            port:
              number: 8080
